# Editogia

./: .gitignore  CMakeLists.txt  README.md  ai.h  ai_data.cpp  animal.cpp  animal.h  animal_data.cpp  area.cpp  area.h  building.cpp  building.h  building_data.cpp  citizen.cpp  citizen.h  city_achievement.cpp  color.cpp  files.cpp  game.cpp  game.h  geometry.cpp  globals.h  glyph.cpp  glyph.h  help_data.cpp  interface.cpp  map.h  military.cpp  pathfind.h  player_city.cpp  player_city.h  race.cpp  race.h  race_data.cpp  resource.h  resource_data.cpp  trade.cpp  world.cpp
Include/Cuss/: ActionID.hpp  Binding.hpp  Interface.hpp
Include/Cuss/Elements/: Alignment.hpp  Drawing.hpp  Element.hpp  List.hpp  Menu.hpp  Number.hpp  TextBox.hpp  TextEntry.hpp  Type.hpp
Include/Editogia/: ManagerResources.hpp  Message.hpp  Recipe.hpp  ai_city.h  area.h  building.h  citizen.h  city.h  city_achievement.h  city_type.h  color.h  combat.h  date.h  files.h  game.h  geometry.h  glyph.h  help.h  interface.h  kingdom.h  map.h  map_type.h  pathfind.h  player_city.h  race.h  resource.h  rng.h  stringfunc.h  window.h  world.h
Include/Editogia/Entity/: animal.h  citizen.h  race.h
Include/Editogia/Entity/Org/: ai.h  ai_city.h  area.h  city.h  city_achievement.h  combat.h  kingdom.h  military.h  player_city.h  trade.h
Include/Editogia/Gea/: map.h  resource.h  world.h
Include/Editogia/IO/File/: files.h
Include/Editogia/IO/User/: Key.hpp  KeyCode.hpp  keys.h
Include/Editogia/Math/: geometry.h  pathfind.h
Include/Editogia/Mechanism/: ManagerResources.hpp  Recipe.hpp  building.h
Include/Editogia/Render/: IRender.hpp
Include/Editogia/Render/Backend/Curses/: Curses.hpp
Include/Editogia/Render/View/: Glyph.h  Message.hpp  TextColor.hpp  color.h  window.h
Include/Editogia/Scene/: HelpScene.hpp  IScene.hpp  Menu.hpp  MenuScene.hpp  SceneManager.hpp  TypeScene.hpp
Include/Editogia/Time/: Date.h
Include/Editogia/Util/: Container.hpp  stringfunc.h
Include/Editogia/View/: Glyph.h
Source/App/Cuss/: CMakeLists.txt  cuss_editor.cpp  cusstest.cpp
Source/App/Editor/: cuss_editor.cpp  cusstest.cpp
Source/Common/: CMakeLists.txt  color.cpp  cuss.cpp  files.cpp  glyph.cpp  stringfunc.cpp  window.cpp
Source/Common/Backend/Curses/: Curses.cpp
Source/Common/IO/User/: keys.cpp
Source/Common/View/: Glyph.cpp  TextColor.cpp
Source/Cuss/: ActionID.cpp  Binding.cpp  CMakeLists.txt  Interface.cpp
Source/Cuss/Elements/: Alignment.cpp  Drawing.cpp  Element.cpp  List.cpp  Menu.cpp  Number.cpp  TextBox.cpp  TextEntry.cpp  Type.cpp
Source/Editogia/: CMakeLists.txt  ManagerResources.cpp  Recipe.cpp  ai_city.cpp  ai_data.cpp  animal.cpp  animal_data.cpp  area.cpp  area_data.cpp  building.cpp  building_data.cpp  citizen.cpp  city.cpp  city_achievement.cpp  city_type.cpp  combat.cpp  cuss.cpp  date.cpp  game.cpp  geometry.cpp  globals.cpp  help.cpp  help_data.cpp  init.cpp  interface.cpp  keys.cpp  kingdom.cpp  main.cpp  map.cpp  map_data.cpp  map_type_data.cpp  military.cpp  pathfind.cpp  player_city.cpp  race.cpp  race_data.cpp  resource.cpp  resource_data.cpp  rng.cpp  stringfunc.cpp  (+2 more)
Source/Editogia/Entity/: animal.cpp  citizen.cpp  race.cpp
Source/Editogia/Entity/Org/: ai_city.cpp  area.cpp  city.cpp  city_achievement.cpp  city_type.cpp  combat.cpp  kingdom.cpp  military.cpp  player_city.cpp  trade.cpp
Source/Editogia/Gea/: map.cpp  resource.cpp  world.cpp
Source/Editogia/IO/User/: Key.cpp  keys.cpp
Source/Editogia/Math/: geometry.cpp  pathfind.cpp  rng.cpp
Source/Editogia/Mechanism/: ManagerResources.cpp  Recipe.cpp  building.cpp
Source/Editogia/Render/Backend/Curses/: Curses.cpp
Source/Editogia/Render/View/: Message.cpp  help.cpp
Source/Editogia/Scene/: HelpScene.cpp  Menu.cpp  MenuScene.cpp  SceneManager.cpp
Source/Editogia/Time/: Date.cpp
Source/Editogia/Util/Time/: Date.cpp
Test/: CMakeLists.txt
Test/Unit/: CMakeLists.txt  TestUtilContainer.cpp
