CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(Editogia)

# Used for find resources from the root path of project
SET(EDITOGIA_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(EDITOGIA_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})

INCLUDE(CMakeModules/CPM.cmake)

CPMAddPackage("gh:Andres6936/Junos@6.17.3")
CPMAddPackage("gh:Andres6936/Levin@2021.0523")
CPMAddPackage("gh:onqtam/doctest#2.4.6")

ADD_SUBDIRECTORY(Source/Common)
ADD_SUBDIRECTORY(Source/App/Cuss)
ADD_SUBDIRECTORY(Source/Editogia)

FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/notes DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cuss DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)

FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/art.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/motd.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/new_food.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)

#[[ Set CURSES_NEED_NCURSES to TRUE before the find_package(Curses) call if
 NCurses functionality is required. Set CURSES_NEED_WIDE to TRUE before the
 find_package(Curses) call if unicode functionality is required. ]]#
SET(CURSES_NEED_NCURSES TRUE)
SET(CURSES_NEED_WIDE TRUE)

FIND_PACKAGE(Curses)

IF (CURSES_FOUND)
    TARGET_INCLUDE_DIRECTORIES(Editogia.App PRIVATE ${CURSES_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(Editogia.App PRIVATE ${CURSES_LIBRARIES})

    TARGET_INCLUDE_DIRECTORIES(Editogia.Cusstest PRIVATE ${CURSES_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(Editogia.Cusstest PRIVATE ${CURSES_LIBRARIES})

    TARGET_INCLUDE_DIRECTORIES(Editogia.Cussed PRIVATE ${CURSES_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(Editogia.Cussed PRIVATE ${CURSES_LIBRARIES})
ELSE()
    MESSAGE(FATAL_ERROR "Not support to NCurses")
ENDIF()

ENABLE_TESTING()

ADD_SUBDIRECTORY(Test/)