ADD_EXECUTABLE(Editogia.App
        ai_city.cpp
        ai_data.cpp
        animal.cpp
        animal_data.cpp
        area.cpp
        area_data.cpp
        building.cpp
        building_data.cpp
        citizen.cpp
        city_achievement.cpp
        city.cpp
        city_type.cpp
        combat.cpp
        date.cpp
        game.cpp
        geometry.cpp
        globals.cpp
        help.cpp
        help_data.cpp
        init.cpp
        interface.cpp
        keys.cpp
        kingdom.cpp
        main.cpp
        map.cpp
        map_data.cpp
        map_type_data.cpp
        military.cpp
        pathfind.cpp
        player_city.cpp
        race.cpp
        race_data.cpp
        resource.cpp
        resource_data.cpp
        rng.cpp
        trade.cpp
        world.cpp
        )
SET_TARGET_PROPERTIES(Editogia.App PROPERTIES CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(Editogia.App PRIVATE Editogia.Common)
TARGET_INCLUDE_DIRECTORIES(Editogia.App PRIVATE $<BUILD_INTERFACE:${EDITOGIA_ROOT_DIR}/Include/>)